<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_sky"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llLocationPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv0"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:hint="@string/stad_land"
                android:inputType="text"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/ibCurrentLocation"
                android:layout_width="51dp"
                android:layout_height="match_parent"
                android:onClick="getWeatherByCurrentLocation"
                android:src="@drawable/current_location2"
                android:background="#00ffffff" />

        </LinearLayout>


        <Button
            android:id="@+id/btInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.1"
            android:background="#1300ff0f"
            android:onClick="getWeatherByInput"
            android:text="@string/go" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llLocationPanel"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/etCurrentTemp"
        android:layout_marginStart="47dp"
        android:layout_toEndOf="@+id/tv0"
        android:src="@drawable/sunny" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv0"
        android:layout_marginTop="15dp"
        android:text="@string/temp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv1"
        android:layout_marginLeft="20sp"
        android:layout_toEndOf="@+id/tv1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="15dp"
        android:text="@string/wind"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_toEndOf="@+id/tv1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv4"
        android:layout_marginTop="40dp"
        android:text="@string/pressure"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv6"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_toEndOf="@+id/tv1"
        android:textColor="#000000"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv6"
        android:layout_marginTop="15dp"
        android:text="@string/humidity"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv7"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_toEndOf="@+id/tv1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv7"
        android:layout_marginTop="15dp"
        android:text="@string/sunset_sunrise"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etSunsetRise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv8"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_toEndOf="@+id/tv1"
        android:textColor="#000000"
        android:textSize="20sp" />

</RelativeLayout>
